default_config_DATA = \
	default/config
default_configdir = $(datadir)/lxpanel/profile/default

default_config_panel_DATA = \
        default/panels/panel
default_config_paneldir = $(datadir)/lxpanel/profile/default/panels

uidir=$(datadir)/lxpanel/ui
ui_DATA= \
        ui/panel-pref.glade

lxpanel_images_DATA = \
	images/my-computer.png \
	images/redhat-internet.png \
	images/stock_volume.png \
	images/file-manager.png \
	images/gnome-applications.png \
	images/gnome-control-center.png \
	images/gnome-devel.png \
	images/gnome-fs-desktop.png \
	images/gnome-globe.png \
	images/gnome-graphics.png \
	images/gnome-joystick.png \
	images/gnome-multimedia.png \
	images/gnome-logout.png \
	images/gnome-netstatus-0-24.png \
	images/gnome-netstatus-25-49.png \
	images/gnome-netstatus-50-74.png \
	images/gnome-netstatus-75-100.png \
	images/gnome-netstatus-disconn.png \
	images/gnome-netstatus-error.png \
	images/gnome-netstatus-idle.png \
	images/gnome-netstatus-rx.png \
	images/gnome-netstatus-txrx.png \
	images/gnome-netstatus-tx.png \
	images/gnome-settings.png \
	images/gnome-setting.png \
	images/gnome-system.png \
	images/gnome-util.png \
	images/background.png \
	images/volume.png \
	images/mute.png \
	images/ns-bothrs.png \
	images/ns-connected.png \
	images/ns-disconnect.png \
	images/ns-problem.png \
	images/ns-recvdata.png \
	images/ns-senddata.png \
	images/ns-lock.png \
	images/capslock-on.png \
	images/capslock-off.png \
	images/numlock-on.png \
	images/numlock-off.png \
	images/scrllock-on.png \
	images/scrllock-off.png


lxpanel_imagesdir = $(datadir)/lxpanel/images

EXTRA_DIST = \
	default/panels/panel.in \
	$(lxpanel_DATA) \
	$(lxpanel_images_DATA) \
	$(ui_DATA) \
	$(default_config_DATA)

